src/test/ui/issues/issue-18819.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-18819.rs:16:5
   |
LL |     print_x(X);
   |     ^^^^^^^^-^
   |     |       |
   |     |       expected `&dyn Foo<Item = bool>`, found `X`
   |     an argument of type &str is missing
   |
note: function defined here
  --> $DIR/issue-18819.rs:11:4
   |
LL | fn print_x(_: &dyn Foo<Item=bool>, extra: &str) {
   |    ^^^^^^^ ----------------------  -----------
help: did you mean
   |
LL |     print_x({&dyn Foo<Item = bool>}, {&str});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
